--- a/package.json
+++ b/package.json
@@ -11,10 +11,25 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src",
+    "format": "prettier --write src/**/*.{js,json,css,scss}",
+    "full-check": "set CI=true && prettier --write && eslint --max-warnings=0 && react-scripts test && npm run lint && git add ."
   },
   "eslintConfig": {
     "extends": "react-app"
+  },
+  "husky": {
+    "hooks": {
+      "pre-push": "cross-env CI=true lint-staged"
+    }
+  },
+  "prettier": {
+    "printWidth": 100,
+    "trailingComma": "all",
+    "tabWidth": 2,
+    "semi": true,
+    "singleQuote": true
   },
   "browserslist": {
     "production": [
@@ -27,5 +42,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^6.5.1",
+    "eslint-plugin-react": "^7.16.0",
+    "husky": "^3.0.8",
+    "prettier": "^1.18.2"
   }
 }
