--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "format": "prettier --write src/**/*.{js,json,css,scss}",
-    "full-check": "npm run lint && git add ."
+    "full-check": "npm run lint"
   },
   "eslintConfig": {
     "extends": "react-app"
