--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "format": "prettier --write src/**/*.{js,json,css,scss}",
-    "full-check": "npm run lint"
+    "full-check": "set CI=true && prettier --write && eslint --max-warnings=0 && react-scripts test && npm run lint && git add ."
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "husky": {
     "hooks": {
-      "pre-push": "full-check"
+      "pre-push": "npm run full-check"
     }
   },
   "prettier": {
