--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "apexcharts": "^3.8.6",
     "react": "^16.10.2",
+    "react-apexcharts": "^1.3.3",
     "react-dom": "^16.10.2",
     "react-scripts": "3.2.0"
   },
@@ -14,7 +16,9 @@
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "format": "prettier --write src/**/*.{js,json,css,scss}",
-    "full-check": " npm run lint && eslint --max-warnings=0 && npm run format && npm run test --bail --findRelatedTests && git add ."
+    "full-check": "npm run lint && eslint --max-warnings=0 && npm run format && npm run test --bail --findRelatedTests && git add .",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -44,6 +48,12 @@
     ]
   },
   "devDependencies": {
+    "@babel/core": "^7.6.2",
+    "@storybook/addon-actions": "^5.2.1",
+    "@storybook/addon-links": "^5.2.1",
+    "@storybook/addons": "^5.2.1",
+    "@storybook/react": "^5.2.1",
+    "babel-loader": "^8.0.6",
     "cross-env": "^6.0.3",
     "eslint": "^6.5.1",
     "eslint-plugin-react": "^7.16.0",
