--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "apexcharts": "^3.8.6",
+    "node-sass": "^4.12.0",
     "react": "^16.10.2",
     "react-apexcharts": "^1.3.3",
     "react-dom": "^16.10.2",
