--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "apexcharts": "^3.8.6",
     "node-sass": "^4.12.0",
+    "prop-types": "^15.7.2",
     "react": "^16.10.2",
     "react-apexcharts": "^1.3.3",
     "react-dom": "^16.10.2",
