--- a/package.json
+++ b/package.json
@@ -18,17 +18,18 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "lint": "eslint src",
-    "format": "prettier --write src/**/*.{js,json,css,scss}",
-    "full-check": "npm run lint && eslint --max-warnings=0 && npm run format && npm run test --bail --findRelatedTests && git add .",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "format": "prettier --write \"src/**/*.{js,json}\"",
+    "push-check": "npm run test --bail --findRelatedTests",
+    "commit-check": "npm run format && npm run lint --max-warnings=0 && git add .",
+    "storybook": "start-storybook -p 6006"
   },
   "eslintConfig": {
     "extends": "react-app"
   },
   "husky": {
     "hooks": {
-      "pre-push": "cross-env CI=true npm run full-check"
+      "pre-push": "cross-env CI=true npm run full-check",
+      "pre-commit": "cross-env CI=true npm run commit-check"
     }
   },
   "prettier": {
