--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "testCoverage": "react-scripts test --coverage",
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "format": "prettier --write \"src/**/*.{js,json}\"",
@@ -30,6 +31,22 @@
     "hooks": {
       "pre-push": "cross-env CI=true npm run push-check",
       "pre-commit": "cross-env CI=true npm run commit-check"
+    }
+  },
+  "jest": {
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ],
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}"
+    ],
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
     }
   },
   "prettier": {
@@ -59,9 +76,13 @@
     "@storybook/react": "^5.2.1",
     "babel-loader": "^8.0.6",
     "cross-env": "^6.0.3",
+    "enzyme": "^3.10.0",
+    "enzyme-adapter-react-16": "^1.15.1",
+    "enzyme-to-json": "^3.4.3",
     "eslint": "^6.5.1",
     "eslint-plugin-react": "^7.16.0",
     "husky": "^3.0.8",
+    "jest-enzyme": "^7.1.1",
     "prettier": "^1.18.2"
   }
 }
