--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "testCoverage": "react-scripts test --coverage",
+    "testCoverage": "npm t -- --coverage --watchAll=false",
     "eject": "react-scripts eject",
     "lint": "eslint src",
     "format": "prettier --write \"src/**/*.{js,json}\"",
@@ -38,7 +38,7 @@
       "enzyme-to-json/serializer"
     ],
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
+      "src/**/*.{js,jsx,ts,tsx}"
     ],
     "coverageThreshold": {
       "global": {
@@ -47,7 +47,10 @@
         "lines": 100,
         "statements": 100
       }
-    }
+    },
+    "coverageReporters": [
+      "text"
+    ]
   },
   "prettier": {
     "printWidth": 100,
@@ -83,6 +86,7 @@
     "eslint-plugin-react": "^7.16.0",
     "husky": "^3.0.8",
     "jest-enzyme": "^7.1.1",
-    "prettier": "^1.18.2"
+    "prettier": "^1.18.2",
+    "sinon": "^7.5.0"
   }
 }
