--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
+    "test:coverage": "set CI=true && react-scripts test --coverage",
     "coverage": "npm t -- --coverage --watchAll=false",
     "eject": "react-scripts eject",
     "lint": "eslint src",
