--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-testing": "^3.1.3",
     "apexcharts": "^3.8.6",
     "apollo-boost": "^0.4.4",
     "apollo-link-context": "^1.0.19",
@@ -45,7 +46,10 @@
       "enzyme-to-json/serializer"
     ],
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}"
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!**/data.js",
+      "!**/index.js",
+      "!**/constants.js"
     ],
     "coverageThreshold": {
       "global": {
