--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "^3.1.3",
+    "@apollo/react-testing": "^3.1.3",
     "apexcharts": "^3.8.6",
     "apollo-boost": "^0.4.4",
     "apollo-link-context": "^1.0.19",
@@ -21,6 +22,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
+    "test:coverage": "set CI=true && react-scripts test --coverage",
     "coverage": "npm t -- --coverage --watchAll=false",
     "eject": "react-scripts eject",
     "lint": "eslint src",
@@ -43,7 +46,10 @@
       "enzyme-to-json/serializer"
     ],
     "collectCoverageFrom": [
-      "src/**/*.{js,jsx,ts,tsx}"
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!**/data.js",
+      "!**/index.js",
+      "!**/constants.js"
     ],
     "coverageThreshold": {
       "global": {
