--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "apexcharts": "^3.8.6",
     "apollo-boost": "^0.4.4",
     "apollo-link-context": "^1.0.19",
+    "dotenv": "^8.2.0",
     "graphql": "^14.5.8",
     "graphql-tag.macro": "^2.0.1",
     "node-sass": "^4.12.0",
